--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -20,8 +20,8 @@
 # in sync with this file.
 
 analyzer:
-  strong-mode:
-    implicit-dynamic: false
+  language:
+    strict-raw-types: true
   errors:
     # treat missing required parameters as a warning (not a hint)
     missing_required_param: warning
@@ -44,11 +44,9 @@ linter:
     - always_declare_return_types
     - always_put_control_body_on_new_line
     # - always_put_required_named_parameters_first # we prefer having parameters in the same order as fields https://github.com/flutter/flutter/issues/10219
-    - always_require_non_null_named_parameters
     - always_specify_types
     - annotate_overrides
     # - avoid_annotating_with_dynamic # conflicts with always_specify_types
-    - avoid_as
     # - avoid_bool_literals_in_conditional_expressions # not yet tested
     # - avoid_catches_without_on_clauses # we do this commonly
     # - avoid_catching_errors # we do this commonly
@@ -85,11 +83,10 @@ linter:
     - hash_and_equals
     - implementation_imports
     # - invariant_booleans # https://github.com/flutter/flutter/issues/5790
-    - iterable_contains_unrelated_type
+    - collection_methods_unrelated_type
     # - join_return_with_assignment # not yet tested
     - library_names
     - library_prefixes
-    - list_remove_unrelated_type
     # - literal_only_boolean_expressions # https://github.com/flutter/flutter/issues/5791
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
