--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: date_calendar
-version: 0.2.1
+version: 0.2.1+1
+publish_to: 'none'
 description: >
-  A calendar interface and Gregorian calendar implemenation
-author: Dan Field <dfield@gmail.com>
+  A calendar interface and Gregorian calendar implementation
 homepage: https://github.com/dnfield/dart_calendar
 dev_dependencies:
-  test: ^1.3.0
+  test: ^1.24.9
 environment:
-  sdk: '>=2.0.0-dev.8.0 <3.0.0'
+  sdk: '>=3.1.2 <4.0.0'
